resolve spacing issue in carousel mobile

--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -19,7 +19,7 @@
     background: var(--dark-background);
     transition: var(--transition);
     h1 {
-        padding: 1rem 0 0 2rem;
+        padding: 2rem;
         color: var(--dark-headline)
     }
 }
