--- a/src/components/Carousel/CarouselButtons.module.scss
+++ b/src/components/Carousel/CarouselButtons.module.scss
@@ -57,7 +57,7 @@
 @media only screen and (max-width: 377px) {
     .main, .darkMain {
         .buttonLeft, .buttonRight {
-            bottom: 20px;
+            bottom: 10px;
         }
     }
 }
